--- a/theme.toml
+++ b/theme.toml
@@ -1,16 +1,21 @@
-name = "Kross Hugo"
+# theme.toml template for a Hugo theme
+# See https://github.com/gohugoio/hugoThemes#themetoml for an example
+
+name = "Tale"
 license = "MIT"
-licenselink = "https://github.com/yourname/yourtheme/blob/master/LICENSE"
-description = "Hugo port of the Themefisher’s Kross Template"
-homepage = "https://gethugothemes.com/products/kross-hugo-theme/"
-tags = ['landing-page', 'fast', 'light', 'white', 'modern', 'themefisher', 'hugo-theme', 'hugo-templates', 'bootstrap', 'blog', 'responsive', 'clean', 'simple', 'creative', 'contact-form', 'custom-themes', 'mobile', 'minimalistic', 'pages', 'resume', 'portfolio', 'google analytics', 'customizable', 'flexbox', 'presentation', 'product', 'theme', 'typography']
-features = ['bootstrap','responsive']
-min_version = "0.64.0"
+licenselink = "https://github.com/EmielH/tale-hugo/blob/master/LICENSE"
+description = "A port of the Tale theme for Hugo. Tale is a minimal Jekyll theme curated for storytellers."
+homepage = "https://github.com/EmielH/tale-hugo"
+tags = ["minimal", "clean", "responsive", "simple", "personal", "blog", "starter", "light", "typography"]
+features = ["pagination"]
+min_version = "0.50"
 
 [author]
-  name = "Themefisher"
-  homepage = "https://themefisher.com/"
+  name = "Emiel Hollander"
+  homepage = "https://www.emielhollander.nl"
 
+# If porting an existing theme
 [original]
-  name = "kross"
-  homepage = "https://themefisher.com/products/kross-creative-portfolio-template/"
+  name = "Chester How"
+  homepage = "https://github.com/chesterhow/tale"
+  repo = "https://github.com/chesterhow/tale"
